--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@react-liblary/use-fetch": "^1.0.2",
     "date-fns": "^2.16.1",
     "next": "^10.0.5",
     "react": "^17.0.1",
@@ -35,12 +36,12 @@
     "@storybook/addon-viewport": "^6.1.14",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.1.14",
-    "@types/styled-components": "^5.1.7",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-jss": "^10.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
     "eslint": "^7.18.0",
