--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "lint": "eslint --ext .js,.ts,.tsx src",
     "lint:fix": "eslint --fix --ext .js,.ts,.tsx src",
     "sf": "node bin/sf",
-    "docker:start": "docker-compose -p caddy-log -f docker/docker-compose.yml up -d",
+    "docker:start": "docker-compose --env-file .env-deploy  -p caddy-log -f docker/docker-compose.yml up -d",
     "docker:build": "docker-compose -p caddy-log -f docker/docker-compose.yml build --parallel --compress --pull",
-    "deploy": "docker-compose  -p caddy-log -f docker/docker-compose.yml build --parallel --compress --pull && docker save caddy-log_node | docker --tls -H croud.jp load && docker-compose --env-file .env-deploy  -p caddy-log -f docker/docker-compose.yml up -d"
+    "docker:upload": "docker save caddy-log_node | env-exec -e .env-deploy docker load",
+    "deploy": "yarn docker:build && yarn docker:upload && docker:start"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
@@ -23,31 +24,29 @@
     "next": "^10.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-jss": "^10.5.0",
-    "styled-components": "^5.2.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.1.14",
+    "@storybook/addon-actions": "^6.1.15",
     "@storybook/addon-console": "^1.2.2",
-    "@storybook/addon-docs": "^6.1.14",
-    "@storybook/addon-storysource": "^6.1.14",
-    "@storybook/addon-viewport": "^6.1.14",
+    "@storybook/addon-docs": "^6.1.15",
+    "@storybook/addon-storysource": "^6.1.15",
+    "@storybook/addon-viewport": "^6.1.15",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.1.14",
+    "@storybook/react": "^6.1.15",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-jss": "^10.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
+    "env-exec": "^1.0.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1",
-    "react-router-dom": "^5.2.0"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
